Revision history for {{$dist->name}}

{{$NEXT}}

1.53      2015-03-26 08:06:34 -0400
  - Updated my dists to latest
  - Added Win32API::ProcessStatus
  - Added File::Which

1.52      2015-03-18 19:03:15 -0400
  - Added Alien::flex
  - Updated my dists to latest
  - Switch Term::EditLine2 to Term::EditLine
    (the former was deprecated when I took over the latter)

1.51      2015-03-01 17:20:30 -0500
  - Updated my dists to latest
  - Added FFI (on some platforms)

1.50      2015-02-22 15:33:04 -0500
  - updated my dists to latest

1.49      2015-02-21 14:49:14 -0500
  - Updated my dists to latest
  - Added Win32::ErrorMode (MSWin32 / cygwin only)
  - Removed Test::Vars

1.48      2015-02-19 07:59:25 -0500
  - updated my dists to latest
  - rm AnyEvent
  - rm Authen::Simple
  - rm Crypt::PasswdMD5
  - rm DBI
  - rm File::chdir
  - rm HTTP::Tiny
  - rm IPC::Run
  - rm Number::Bytes::Human
  - rm Perl::Critic

1.47      2015-02-18 20:04:36 -0500
  - updated my dists to latest
  - rm Mojo::JSON::Any

1.46      2015-02-12 13:37:07 -0500
  - updated my dists to latest

1.45      2015-02-10 19:09:00 -0500
  - added FFI::Platypus::Lang::Fortran

1.44      2015-02-09 08:20:53 -0500
  - updated my dists to latest

1.43      2015-02-05 14:24:56 -0500
  - updated my dists to latest

1.42      2015-02-03 16:15:13 -0500
  - fix logic from last revision
  - updated my dists to latest

1.41      2015-02-03 16:06:01 -0500
  - UUID::FFI on linux only
  - Alien::Editline and Term::EditLine2 are not installed on windows
  - FFI::TinyCC not installed on cygwin

1.40      2015-02-03 12:05:05 -0500
  - added FFI::Platypus::Lang::Pascal
  - updated my dists to latest
  
1.39      2015-02-02 05:08:44 -0500
  - fix version for FFI::ExtractSymbols

1.38      2015-02-02 05:05:16 -0500
  - added FFI::ExtractSymbols
  - added FFI::Platypus::Lang::CPP::Demangle::XS
  - updated my dists to latest

1.37      2015-01-30 15:47:23 -0500
  - added FFI::Platypus::Lang::Rust