@@ -35,7 +35,7 @@ Alien::nasm                                    = 0.06
 Alien::o2dll                                   = 0.03
 Alien::Packages::Cygwin                        = 0.03
 Alien::patch                                   = 0.03
-;Alt::Alien::FFI::System                       = 0.07
+;Alt::Alien::FFI::System                       = 0.09
 AnyEvent::Finger                               = 0.10
 AnyEvent::FTP                                  = 0.08
 AnyEvent::Git::Wrapper                         = 0.07
@@ -43,6 +43,7 @@ AnyEvent::Ident                                = 0.06
 AnyEvent::Open3::Simple                        = 0.82
 AnyEvent::WebSocket::Client                    = 0.30
 App::cpangitify                                = 0.12
+App::pwhich                                    = 1.14
 App::RegexFileUtils                            = 0.06
 App::spaceless                                 = 0.06
 App::which_package                             = 0.05
@@ -77,7 +78,7 @@ FFI::TinyCC                                    = 0.21
 FFI::Util                                      = 0.14
 File::LibMagic::FFI                            = 0.04
 File::Listing::Ftpcopy                         = 0.06
-File::Which                                    = 1.11
+File::Which                                    = 1.16
 Lingua::Alphabet::Phonetic::LAPD               = 0.02
 Log::Log4perl::Appender::TAP                   = 0.02
 Mojolicious::Plugin::Ident                     = 0.31
@@ -102,6 +103,7 @@ UUID::FFI                                      = 0.05
 WebService::LiveJournal                        = 0.07
 Win32::ErrorMode                               = 0.04
 Win32::Getppid                                 = 0.02
+Win32::Process::Info                           = 1.022
 Win32::Shortcut::Readlink                      = 0.02
 Win32API::ProcessStatus                        = 0.03
 WWW::Bugzilla::BugTree                         = 0.04
